<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/forgot_pwd_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/dimen32"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/title_img"
                android:layout_width="159dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="@dimen/dimen_8"
                android:src="@drawable/ic_title_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:text="Forgot Password"
                android:textAlignment="center"
                android:fontFamily="@font/outfit_semibold"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mob_pwd_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen24"
                android:layout_marginBottom="@dimen/dimen_8"
                android:text="@string/login_with_otp_title"
                android:textAlignment="center"
                android:fontFamily="@font/outfit_regular"
                android:textColor="@color/gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/mobile_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/outfit_medium"
                android:paddingVertical="4dp"
                android:text="@string/mobile_number"
                android:textColor="@color/gray"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/mobileEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/round_gray_border"
                android:digits="1234567890"
                android:fontFamily="@font/outfit_regular"
                android:inputType="phone"
                android:maxLength="10"
                android:cursorVisible="true"
                android:paddingLeft="@dimen/dimen15"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/get_otp_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/btn_selector"
                android:fontFamily="@font/outfit_semibold"
                android:text="@string/get_otp"
                android:enabled="false"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/login_with_otp_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_gravity="center"
                android:fontFamily="@font/outfit_medium"
                android:text="@string/login_with_mobile_and_otp"
                android:textAlignment="center"
                android:textColor="@drawable/link_bg"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</layout>