<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".screens.AddLeadActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0D192F">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:id="@+id/title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/outfit_medium"
                    android:text="Edit Lead"
                    android:textColor="@color/white" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dimen_8">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputEditText.OutlinedBox.CustomFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_4"
                    android:hint="@string/full_name">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text=" "></androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputEditText.OutlinedBox.CustomFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_4"
                    android:hint="@string/mob_num">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text=" "></androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputEditText.OutlinedBox.CustomFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_4"
                    android:hint="@string/alternate_num">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text=" "></androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputEditText.OutlinedBox.CustomFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_4"
                    android:hint="Enter Email">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text=" "></androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_4"
                    android:hint="@string/choose_requirement"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    app:endIconDrawable="@drawable/ic_dropdown">

                    <AutoCompleteTextView
                        android:id="@+id/requirement"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:text=" "/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_4"
                    android:hint="@string/select_lead_type"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    app:endIconDrawable="@drawable/ic_dropdown">

                    <AutoCompleteTextView
                        android:id="@+id/lead_type"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:text=" "/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_4"
                    android:hint="@string/select_lead_source"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    app:endIconDrawable="@drawable/ic_dropdown">

                    <AutoCompleteTextView
                        android:id="@+id/lead_source"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:text=" "/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_4"
                    android:hint="@string/assign_owner"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    app:endIconDrawable="@drawable/ic_dropdown">

                    <AutoCompleteTextView
                        android:id="@+id/assign_owner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:text=" "/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen16"
                    android:fontFamily="@font/outfit_medium"
                    android:text="Address"
                    android:textColor="@color/darker_Blue"
                    android:textSize="@dimen/dimen16"
                    android:textStyle="bold"></TextView>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputEditText.OutlinedBox.CustomFont"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginVertical="@dimen/dimen_4"
                    android:hint="@string/enter_address_line_1">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text=" "></androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputEditText.OutlinedBox.CustomFont"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginVertical="@dimen/dimen_4"
                    android:hint="@string/enter_address_line_2">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text=" "></androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_4"
                    android:hint="@string/select_state"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    app:endIconDrawable="@drawable/ic_dropdown">

                    <AutoCompleteTextView
                        android:id="@+id/select_state"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:text=" "/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_4"
                    android:hint="@string/select_city"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    app:endIconDrawable="@drawable/ic_dropdown">

                    <AutoCompleteTextView
                        android:id="@+id/select_city"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:text=" "/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputEditText.OutlinedBox.CustomFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_4"
                    android:hint="@string/enter_zipcode">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/enter_zipcode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text=" "></androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputEditText.OutlinedBox.CustomFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_4"
                    android:hint="@string/enter_gst">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/enter_gst"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLength="15"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                        android:text=" "></androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen16"
                    android:fontFamily="@font/outfit_medium"
                    android:text="@string/notes_attachements"
                    android:textColor="@color/darker_Blue"
                    android:textSize="@dimen/dimen16"
                    android:textStyle="bold"></TextView>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputEditText.OutlinedBox.CustomFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_4"
                    android:hint="@string/note">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/note"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text=" "></androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_8"
                    android:background="@drawable/round_gray_border">

                    <TextView
                        android:id="@+id/choose_file"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/dark_grey_round_bg"
                        android:paddingHorizontal="@dimen/dimen16"
                        android:paddingVertical="@dimen/dimen_8"
                        android:text="Choose file"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dimen16"></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_cloud_upload"
                        android:fontFamily="@font/outfit_medium"
                        android:paddingHorizontal="@dimen/dimen16"
                        android:paddingVertical="@dimen/dimen_8"
                        android:paddingStart="@dimen/dimen24"
                        android:text="Add file upto 2mb"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/dimen16"></TextView>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/upload_file_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_12"
                    android:numColumns="3"
                    tools:listitem="@layout/upload_file_info"></androidx.recyclerview.widget.RecyclerView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/dimen16"
                    android:paddingVertical="@dimen/dimen_8">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_gravity="start"
                        android:background="@drawable/black_border_round_bg"
                        android:fontFamily="@font/outfit_medium"
                        android:text="Cancel"
                        android:textAllCaps="false"
                        android:textColor="@color/darker_Blue"></androidx.appcompat.widget.AppCompatButton>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="end"
                        android:background="@drawable/light_orange_round_bg"
                        android:fontFamily="@font/outfit_medium"
                        android:text="Save"
                        android:textAllCaps="false"
                        android:textColor="@color/white"></androidx.appcompat.widget.AppCompatButton>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>